[b-6] Added test for case if movie not found [b-3] Get all genres task implemented [t-1] Create genre cache task implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:8200/cinema
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
+cron.interval=0 0 */4 * * *
