--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:8200/cinema
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
-cron.interval=0 0 */4 * * *
+cron.interval.genre=0 0 */4 * * *
+cron.interval.token=0 0 */2 * * *
