1. Spring security was implemented 2. SecurityService and its supported classes were deleted 3. Tests were added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=true
 cron.interval.genre=0 0 */4 * * *
 cron.interval.token=0 0 */2 * * *
+
+spring.main.allow-bean-definition-overriding=true
