--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:8200/cinema
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
 spring.jpa.show-sql=true
-cron.interval=0 0 */4 * * *
+cron.interval.genres.cache=0 0 */4 * * *
