--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    url:jdbc:postgresql://localhost:8200/cinema
-    username:postgres
-    password=postgres
+    url: jdbc:postgresql://localhost:8200/cinema
+    username: postgres
+    password: postgres
   jpa:
-    show-sql:true
+    show-sql: true
 
 cron:
   interval:
