--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,12 @@
 spring:
   datasource:
+    driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://localhost:8200/cinema
     username: postgres
     password: postgres
+
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
 
 cron:
