[b-8] Add movie review task implemented; Reformatting table reviews, foreign keys now id's instead of names.

--- a/src/test/resources/all_dataset.yml
+++ b/src/test/resources/all_dataset.yml
@@ -634,163 +634,163 @@ MOVIE_GENRE:
 REVIEWS:
   -
     id: 1
-    movie_name: "Побег из Шоушенка"
-    user_nick_name: "Дарлин Эдвардс"
+    movie_id: 1
+    user_id: 2
     content: "Гениальное кино! Смотришь и думаешь «Так не бывает!», но позже понимаешь, что только так и должно быть. Начинаешь заново осмысливать значение фразы, которую постоянно используешь в своей жизни, «Надежда умирает последней». Ведь если ты не надеешься, то все в твоей жизни гаснет, не остается смысла. Фильм наполнен бесконечным числом правильных афоризмов. Я уверена, что буду пересматривать его сотни раз."
   -
     id: 2
-    movie_name: "Побег из Шоушенка"
-    user_nick_name: "Габриэль Джексон"
+    movie_id: 1
+    user_id: 3
     content: "Кино это является, безусловно, «со знаком качества». Что же до первого места в рейтинге, то, думаю, здесь имело место быть выставление «десяточек» от большинства зрителей вкупе с раздутыми восторженными откликами кинокритиков. Фильм атмосферный. Он драматичный. И, конечно, заслуживает того, чтобы находиться довольно высоко в мировом кинематографе. "
   -
     id: 3
-    movie_name: "Зеленая миля"
-    user_nick_name: "Рональд Рейнольдс"
+    movie_id: 2
+    user_id: 1
     content: "Перестал удивляться тому, что этот фильм занимает сплошь первые места во всевозможных кино рейтингах. Особенно я люблю когда при экранизации литературного произведение из него в силу специфики кинематографа исчезает ирония и появляется некий сверхреализм, обязанный удерживать зрителя у экрана каждую отдельно взятую секунду. "
   -
     id: 4
-    movie_name: "Форрест Гамп"
-    user_nick_name: "Нил Паркер"
+    movie_id: 3
+    user_id: 5
     content: "Много еще можно сказать об этом шедевре. И то, что он учит верить, и то, чтобы никогда не сдаваться… Но самый главный девиз я увидел вот в этой фразе: «Занимайся жизнью, или занимайся смертью»."
   -
     id: 5
-    movie_name: "Список Шиндлера"
-    user_nick_name: "Трэвис Райт"
+    movie_id: 4
+    user_id: 6
     content: "Очень хороший фильм, необычный сюжет, я бы даже сказала непредсказуемый. Такие фильмы уже стали редкостью."
   -
     id: 6
-    movie_name: "1+1"
-    user_nick_name: "Джесси Паттерсон"
+    movie_id: 5
+    user_id: 9
     content: "У меня не найдётся слов, чтобы описать этот фильм. Не хочется быть банальной и говорить какой он отличный, непредсказуемый и т. д., но от этого никуда не деться к сожалению — ведь он ШЕДЕВРАЛЬНЫЙ!"
   -
     id: 7
-    movie_name: "1+1"
-    user_nick_name: "Амелия Кэннеди"
+    movie_id: 5
+    user_id: 7
     content: "Скажу сразу — фильм выглядел многообещающе, даже если не брать в расчет что он находился в топе-250 лучших фильмов. Известные голливудские актеры на главных ролях. Но нет в этом фильме должной атмосферы. Нет такого чувства что вот сейчас случится что-то страшное. Что герои попали в ситуацию из которой не смогут выбраться. В общем, не понравилось."
   -
     id: 8
-    movie_name: "Жизнь прекрасна"
-    user_nick_name: "Габриэль Джексон"
+    movie_id: 7
+    user_id: 3
     content: "«Все должно быть супер! Супер! Су-пер!» И это именно супер, ну слов других не подберешь."
   -
     id: 9
-    movie_name: "Бойцовский клуб"
-    user_nick_name: "Деннис Крейг"
+    movie_id: 8
+    user_id: 10
     content: "Фильм очень красивый. Не во всем, конечно, но яркие персонажи и костюмы — это уже кое-что. "
   -
     id: 10
-    movie_name: "Как приручить дракона"
-    user_nick_name: "Габриэль Джексон"
+    movie_id: 18
+    user_id: 3
     content: "Этот фильм из разряда тех, что могут обеспечить хороший отдых и приподнятое настроение за счёт своей лёгкости, совсем непошлого юмора, умеренной дозы напряжения, динамики нужных скоростей."
   -
     id: 11
-    movie_name: "Как приручить дракона"
-    user_nick_name: "Нил Паркер"
+    movie_id: 18
+    user_id: 5
     content: "Назначается Киношедевром среди развлекательных фильмов."
   -
     id: 12
-    movie_name: "Гладиатор"
-    user_nick_name: "Амелия Кэннеди"
+    movie_id: 15
+    user_id: 7
     content: "Данный кинофильм — нестареющая классика мирового кинематографа, который можно пересматривать до бесконечности и, что удивительно, он не может надоесть."
   -
     id: 13
-    movie_name: "Темный рыцарь"
-    user_nick_name: "Дэрил Брайант"
+    movie_id: 17
+    user_id: 4
     content: "Рекомендую смотреть всем и не обращать внимания на надоевшее уже спасение целого мира одним человеком."
   -
     id: 14
-    movie_name: "Большой куш"
-    user_nick_name: "Дэрил Брайант"
+    movie_id: 16
+    user_id: 4
     content: "Удивлен. Никто не отозвался плохо? Неужели было создано произведение искусства, которое нравится всем, и которое совершенно? Нет. Может, я один такой? Фильм не вызывает во мне никаких эмоций. Неплохая сказочка. Замечательная наивная атмосфера. Местами есть забавные шутки. И, как мне показалось, этот фильм — своего рода стёб над другими боевиками. При этом превосходящий многие боевики."
   -
     id: 15
-    movie_name: "Унесённые призраками"
-    user_nick_name: "Деннис Крейг"
+    movie_id: 11
+    user_id: 10
     content: "Необыкновенно позитивный фильм. Его можно пересматривать много раз для поднятия настроения, находя много смешных, незаметных на первый взгляд моментов."
   -
     id: 16
-    movie_name: "Звёздные войны: Эпизод 4 – Новая надежда"
-    user_nick_name: "Амелия Кэннеди"
+    movie_id: 9
+    user_id: 7
     content: "Легендарный. Культовый. Бессмертный. Три слова. Всего лишь три. А сколько же они выражают неподдельных эмоций и радостных впечатлений по отношению к очередному любимому и уважаемому фильму из минувшего в лету детства? Много. Слишком много. И описать эти сердечные и гарцующие в здравом рассудке чувства обыкновенными строчными предложениями иногда не представляется возможным."
   -
     id: 17
-    movie_name: "Большой куш"
-    user_nick_name: "Трэвис Райт"
+    movie_id: 16
+    user_id: 6
     content: "Приятного просмотра для всех, кто не видел ещё этого шедевра больше впечатлений для тех, кто пересматривает в надцатый раз. =) "
   -
     id: 18
-    movie_name: "Большой куш"
-    user_nick_name: "Нил Паркер"
+    movie_id: 16
+    user_id: 5
     content: "Это один из любимых моих фильмов с самого детства. Я видела его столько раз, что знаю практически наизусть. И могу сказать с уверенностью, что посмотрю еще не один раз. "
   -
     id: 19
-    movie_name: "Молчание ягнят"
-    user_nick_name: "Габриэль Джексон"
+    movie_id: 19
+    user_id: 3
     content: "Фильм, безусловно, посмотрела уже большая часть населения, которая хоть каким-то образом имеет отношение к кинематографу. Я считаю, что фильм можно пересмотреть еще не один раз."
   -
     id: 20
-    movie_name: "Как приручить дракона"
-    user_nick_name: "Айда Дэвис"
+    movie_id: 18
+    user_id: 8
     content: "Фильм продуман до мельчайших деталей. Идеальный фильм для улучшения настроения, единственный в своем роде. Обязателен к просмотру!"
   -
     id: 21
-    movie_name: "Блеф"
-    user_nick_name: "Нил Паркер"
+    movie_id: 23
+    user_id: 5
     content: "Фильм потрясающий, в нем хватает абсолютно всего: и драк, и музыки, и юмора, и любви. "
   -
     id: 22
-    movie_name: "Гран Торино"
-    user_nick_name: "Рональд Рейнольдс"
+    movie_id: 20
+    user_id: 1
     content: "У фильма есть свои мелкие недостатки  и неточности, но многочисленные достоинства в несколько раз перевешивают. Много вдохновляющего креатива!"
   -
     id: 23
-    movie_name: "Молчание ягнят"
-    user_nick_name: "Дарлин Эдвардс"
+    movie_id: 19
+    user_id: 2
     content: "Хоть и не по возрасту мне заводить скрипучую пластинку с мелодией «Раньше и деревья были выше, и трава зеленее…», а хочется. Выражать свою любовь к настолько близкому произведению крайне сложно."
   -
     id: 24
-    movie_name: "Блеф"
-    user_nick_name: "Айда Дэвис"
+    movie_id: 23
+    user_id: 8
     content: "Вердикт: прекрасная, нестареющая классика, которая рекомендована мною для всех."
   -
     id: 25
-    movie_name: "Хороший, плохой, злой"
-    user_nick_name: "Дэрил Брайант"
+    movie_id: 21
+    user_id: 4
     content: "Для воскресного вечернего просмотра подходит по всем критериям."
   -
     id: 26
-    movie_name: "Укрощение строптивого"
-    user_nick_name: "Нил Паркер"
+    movie_id: 22
+    user_id: 5
     content: "Хороший и по-настоящему интересный фильм, с хорошим сюжетом и неплохим музыкальным сопровождением. Всем советую к просмотру."
   -
     id: 27
-    movie_name: "Джанго освобожденный"
-    user_nick_name: "Трэвис Райт"
+    movie_id: 24
+    user_id: 6
     content: "Полагаю, этот фильм должен быть в коллекции каждого уважающего себя киномана. "
   -
     id: 28
-    movie_name: "Танцующий с волками"
-    user_nick_name: "Амелия Кэннеди"
+    movie_id: 25
+    user_id: 7
     content: "Нетленный шедевр мирового кинематографа, который можно пересматривать десятки раз и получать все такой — же, извините за выражение, кайф от просмотра. Минусы у фильма, конечно, есть, но черт возьми. Их просто не хочется замечать! Ты настолько поглощен просмотром фильма, что просто не хочется придираться к разным мелочам. "
   -
     id: 29
-    movie_name: "Джанго освобожденный"
-    user_nick_name: "Айда Дэвис"
+    movie_id: 24
+    user_id: 8
     content: "Фильм только выигрывает от частого просмотра и всегда поднимает мне настроение (наряду с драмой, тут еще и тонкий юмор). "
   -
     id: 30
-    movie_name: "Укрощение строптивого"
-    user_nick_name: "Джесси Паттерсон"
+    movie_id: 22
+    user_id: 9
     content: "Конечно, бесспорно культовый фильм, не реалистичный, наивный, где то глупый, но такой же увлекательный и удивительный, как и много лет назад"
   -
     id: 31
-    movie_name: "Титаник"
-    user_nick_name: "Джесси Паттерсон"
+    movie_id: 12
+    user_id: 9
     content: "В итоге мы имеем отличный представитель своего жанра, который прошёл проверку временем и до сих пор отлично смотрится, несмотря на классический сюжет"
   -
     id: 32
-    movie_name: "Пролетая над гнездом кукушки"
-    user_nick_name: "Деннис Крейг"
+    movie_id: 13
+    user_id: 10
     content: "Скажу только одно — как я жалею, что не посмотрела его раньше!"
 
 
