--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
 			<version>1.4.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
