--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,17 @@
 spring:
-  profiles:
-    include: dev
+  datasource:
+    driverClassName: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
+
+genres:
+  cache:
+    evict:
+      cron:
+        interval: 0 0 */4 * * *
+
+movie:
+  random:
+    value: 3
