--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,14 +4,15 @@ spring:
     url: jdbc:postgresql://localhost:8200/cinema
     username: postgres
     password: postgres
-
-
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+    hibernate:
+      ddl-auto: none
 
-cron:
-  interval:
-    genres:
-      cache: 0 0 */4 * * *
-
+cache:
+  evict:
+    interval:
+      genres: 14400000
+    cron:
+      currency: 59 30 15 * * *
