Trying to implement query count in tests

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 			<artifactId>flyway-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>db-util</artifactId>
+			<version>1.0.7</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!--DTO ENTITY CONVERSION-->
 		<dependency>
