--- a/src/test/resources/all_dataset.yml
+++ b/src/test/resources/all_dataset.yml
@@ -2,7 +2,7 @@ MOVIES:
   -
     id: 1
     name_ukr: "Побег из Шоушенка"
-    name_eng: "The Shawshank Redemption"
+    name_native: "The Shawshank Redemption"
     year: 1994
     description: "Успешный банкир Энди Дюфрейн обвинен в убийстве собственной жены и ее любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкивается с жестокостью и беззаконием, царящими по обе стороны решетки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, вооруженный живым умом и доброй душой, отказывается мириться с приговором судьбы и начинает разрабатывать невероятно дерзкий план своего освобождения."
     rating: 8.9
@@ -11,7 +11,7 @@ MOVIES:
   -
     id: 2
     name_ukr: "Зеленая миля"
-    name_eng: "The Green Mile"
+    name_native: "The Green Mile"
     year: 1999
     description: "Обвиненный в страшном преступлении, Джон Коффи оказывается в блоке смертников тюрьмы «Холодная гора». Вновь прибывший обладал поразительным ростом и был пугающе спокоен, что, впрочем, никак не влияло на отношение к нему начальника блока Пола Эджкомба, привыкшего исполнять приговор."
     rating: 8.9
@@ -20,7 +20,7 @@ MOVIES:
   -
     id: 3
     name_ukr: "Форрест Гамп"
-    name_eng: "Forrest Gump"
+    name_native: "Forrest Gump"
     year: 1994
     description: "От лица главного героя Форреста Гампа, слабоумного безобидного человека с благородным и открытым сердцем, рассказывается история его необыкновенной жизни.Фантастическим образом превращается он в известного футболиста, героя войны, преуспевающего бизнесмена. Он становится миллиардером, но остается таким же бесхитростным, глупым и добрым. Форреста ждет постоянный успех во всем, а он любит девочку, с которой дружил в детстве, но взаимность приходит слишком поздно."
     rating: 8.6
@@ -29,7 +29,7 @@ MOVIES:
   -
     id: 4
     name_ukr: "Список Шиндлера"
-    name_eng: "Schindler's List"
+    name_native: "Schindler's List"
     year: 1993
     description: "Фильм рассказывает реальную историю загадочного Оскара Шиндлера, члена нацистской партии, преуспевающего фабриканта, спасшего во время Второй мировой войны почти 1200 евреев."
     rating: 8.7
@@ -38,7 +38,7 @@ MOVIES:
   -
     id: 5
     name_ukr: "1+1"
-    name_eng: "Intouchables"
+    name_native: "Intouchables"
     year: 2011
     description: "Пострадав в результате несчастного случая, богатый аристократ Филипп нанимает в помощники человека, который менее всего подходит для этой работы, — молодого жителя предместья Дрисса, только что освободившегося из тюрьмы. Несмотря на то, что Филипп прикован к инвалидному креслу, Дриссу удается привнести в размеренную жизнь аристократа дух приключений."
     rating: 8.3
@@ -47,7 +47,7 @@ MOVIES:
   -
     id: 6
     name_ukr: "Начало"
-    name_eng: "Inception"
+    name_native: "Inception"
     year: 2010
     description: "Кобб — талантливый вор, лучший из лучших в опасном искусстве извлечения: он крадет ценные секреты из глубин подсознания во время сна, когда человеческий разум наиболее уязвим. Редкие способности Кобба сделали его ценным игроком в привычном к предательству мире промышленного шпионажа, но они же превратили его в извечного беглеца и лишили всего, что он когда-либо любил. "
     rating: 8.6
@@ -56,7 +56,7 @@ MOVIES:
   -
     id: 7
     name_ukr: "Жизнь прекрасна"
-    name_eng: "La vita è bella"
+    name_native: "La vita è bella"
     year: 1997
     description: "Во время II Мировой войны в Италии в концлагерь были отправлены евреи, отец и его маленький сын. Жена, итальянка, добровольно последовала вслед за ними. В лагере отец сказал сыну, что все происходящее вокруг является очень большой игрой за приз в настоящий танк, который достанется тому мальчику, который сможет не попасться на глаза надзирателям. Он сделал все, чтобы сын поверил в игру и остался жив, прячась в бараке."
     rating: 8.2
@@ -65,7 +65,7 @@ MOVIES:
   -
     id: 8
     name_ukr: "Бойцовский клуб"
-    name_eng: "Fight Club"
+    name_native: "Fight Club"
     year: 1999
     description: "Терзаемый хронической бессонницей и отчаянно пытающийся вырваться из мучительно скучной жизни, клерк встречает некоего Тайлера Дардена, харизматического торговца мылом с извращенной философией. Тайлер уверен, что самосовершенствование — удел слабых, а саморазрушение — единственное, ради чего стоит жить."
     rating: 8.4
@@ -74,7 +74,7 @@ MOVIES:
   -
     id: 9
     name_ukr: "Звёздные войны: Эпизод 4 – Новая надежда"
-    name_eng: "Star Wars"
+    name_native: "Star Wars"
     year: 1977
     description: "Татуин. Планета-пустыня. Уже постаревший рыцарь Джедай Оби Ван Кеноби спасает молодого Люка Скайуокера, когда тот пытается отыскать пропавшего дроида. С этого момента Люк осознает свое истинное назначение: он один из рыцарей Джедай. В то время как гражданская война охватила галактику, а войска повстанцев ведут бои против сил злого Императора, к Люку и Оби Вану присоединяется отчаянный пилот-наемник Хан Соло, и в сопровождении двух дроидов, R2D2 и C-3PO, этот необычный отряд отправляется на поиски предводителя повстанцев — принцессы Леи. Героям предстоит отчаянная схватка с устрашающим Дартом Вейдером — правой рукой Императора и его секретным оружием — «Звездой Смерти»."
     rating: 8.1
@@ -83,7 +83,7 @@ MOVIES:
   -
     id: 10
     name_ukr: "Звёздные войны: Эпизод 5 – Империя наносит ответный удар"
-    name_eng: "Star Wars: Episode V - The Empire Strikes Back"
+    name_native: "Star Wars: Episode V - The Empire Strikes Back"
     year: 1980
     description: "Борьба за Галактику обостряется в пятом эпизоде космической саги. Войска Императора начинают массированную атаку на повстанцев и их союзников. Хан Соло и принцесса Лейя укрываются в Заоблачном Городе, в котором их и захватывает Дарт Вейдер, в то время как Люк Скайуокер находится на таинственной планете джунглей Дагоба. Там Мастер — джедай Йода обучает молодого рыцаря навыкам обретения Силы. Люк даже не предполагает, как скоро ему придется воспользоваться знаниями старого Мастера: впереди битва с превосходящими силами Императора и смертельный поединок с Дартом Вейдером."
     rating: 8.2
@@ -92,7 +92,7 @@ MOVIES:
   -
     id: 11
     name_ukr: "Унесённые призраками"
-    name_eng: "Sen to Chihiro no kamikakushi"
+    name_native: "Sen to Chihiro no kamikakushi"
     year: 2001
     description: "Маленькая Тихиро вместе с мамой и папой переезжают в новый дом. Заблудившись по дороге, они оказываются в странном пустынном городе, где их ждет великолепный пир. Родители с жадностью набрасываются на еду и к ужасу девочки превращаются в свиней, став пленниками злой колдуньи Юбабы, властительницы таинственного мира древних богов и могущественных духов. "
     rating: 8.6
@@ -101,7 +101,7 @@ MOVIES:
   -
     id: 12
     name_ukr: "Титаник"
-    name_eng: "Titanic"
+    name_native: "Titanic"
     year: 1997
     description: "Молодые влюбленные Джек и Роза находят друг друга в первом и последнем плавании «непотопляемого» Титаника. Они не могли знать, что шикарный лайнер столкнется с айсбергом в холодных водах Северной Атлантики, и их страстная любовь превратится в схватку со смертью…"
     rating: 7.9
@@ -110,7 +110,7 @@ MOVIES:
   -
     id: 13
     name_ukr: "Пролетая над гнездом кукушки"
-    name_eng: "One Flew Over the Cuckoo's Nest"
+    name_native: "One Flew Over the Cuckoo's Nest"
     year: 1975
     description: "Сымитировав помешательство в надежде избежать тюремного заключения, Рэндл Патрик МакМерфи попадает в психиатрическую клинику, где почти безраздельным хозяином является жестокосердная сестра Милдред Рэтчед. МакМерфи поражается тому, что прочие пациенты смирились с существующим положением вещей, а некоторые — даже сознательно пришли в лечебницу, прячась от пугающего внешнего мира. И решается на бунт. В одиночку."
     rating: 8.7
@@ -119,7 +119,7 @@ MOVIES:
   -
     id: 14
     name_ukr: "Ходячий замок"
-    name_eng: "Hauru no ugoku shiro"
+    name_native: "Hauru no ugoku shiro"
     year: 2004
     description: "Злая ведьма заточила 18-летнюю Софи в тело старухи. В поисках того, кто поможет ей вернуться к своему облику, Софи знакомится с могущественным волшебником Хаулом и его демоном Кальцифером. Кальцифер должен служить Хаулу по договору, условия которого он не может разглашать. Девушка и демон решают помочь друг другу избавиться от злых чар…"
     rating: 8.2
@@ -128,7 +128,7 @@ MOVIES:
   -
     id: 15
     name_ukr: "Гладиатор"
-    name_eng: "Gladiator"
+    name_native: "Gladiator"
     year: 2000
     description: "В великой Римской империи не было военачальника, равного генералу Максимусу. Непобедимые легионы, которыми командовал этот благородный воин, боготворили его и могли последовать за ним даже в ад. Но случилось так, что отважный Максимус, готовый сразиться с любым противником в честном бою, оказался бессилен против вероломных придворных интриг. Генерала предали и приговорили к смерти. Чудом избежав гибели, Максимус становится гладиатором."
     rating: 8.6
@@ -137,7 +137,7 @@ MOVIES:
   -
     id: 16
     name_ukr: "Большой куш"
-    name_eng: "Snatch."
+    name_native: "Snatch."
     year: 2000
     description: "Четырехпалый Френки должен был переправить краденый алмаз из Англии в США своему боссу Эви. Но вместо этого герой попадает в эпицентр больших неприятностей. Сделав ставку на подпольном боксерском поединке, Френки попадает в круговорот весьма нежелательных событий. Вокруг героя и его груза разворачивается сложная интрига с участием множества колоритных персонажей лондонского дна — русского гангстера, троих незадачливых грабителей, хитрого боксера и угрюмого громилы грозного мафиози. Каждый норовит в одиночку сорвать Большой Куш."
     rating: 8.5
@@ -146,7 +146,7 @@ MOVIES:
   -
     id: 17
     name_ukr: "Темный рыцарь"
-    name_eng: "The Dark Knight"
+    name_native: "The Dark Knight"
     year: 2008
     description: "Бэтмен поднимает ставки в войне с криминалом. С помощью лейтенанта Джима Гордона и прокурора Харви Дента он намерен очистить улицы от преступности, отравляющей город. Сотрудничество оказывается эффективным, но скоро они обнаружат себя посреди хаоса, развязанного восходящим криминальным гением, известным испуганным горожанам под именем Джокер."
     rating: 8.5
@@ -155,7 +155,7 @@ MOVIES:
   -
     id: 18
     name_ukr: "Как приручить дракона"
-    name_eng: "How to Train Your Dragon"
+    name_native: "How to Train Your Dragon"
     year: 2010
     description: "Вы узнаете историю подростка Иккинга, которому не слишком близки традиции его героического племени, много лет ведущего войну с драконами. Мир Иккинга переворачивается с ног на голову, когда он неожиданно встречает дракона Беззубика, который поможет ему и другим викингам увидеть привычный мир с совершенно другой стороны…"
     rating: 8.2
@@ -164,7 +164,7 @@ MOVIES:
   -
     id: 19
     name_ukr: "Молчание ягнят"
-    name_eng: "The Silence of the Lambs"
+    name_native: "The Silence of the Lambs"
     year: 1990
     description: "Психопат похищает и убивает молодых женщин по всему Среднему Западу Америки. ФБР, уверенное в том, что все преступления совершены одним и тем же человеком, поручает агенту Клариссе Старлинг встретиться с заключенным-маньяком, который мог бы объяснить следствию психологические мотивы серийного убийцы и тем самым вывести на его след."
     rating: 8.3
@@ -173,7 +173,7 @@ MOVIES:
   -
     id: 20
     name_ukr: "Гран Торино"
-    name_eng: "Gran Torino"
+    name_native: "Gran Torino"
     year: 2008
     description: "Вышедший на пенсию автомеханик Уолт Ковальски проводит дни, починяя что-то по дому, попивая пиво и раз в месяц заходя к парикмахеру. И хотя последним желанием его недавно почившей жены было совершение им исповеди, Уолту — ожесточившемуся ветерану Корейской войны, всегда держащему свою винтовку наготове, — признаваться в общем-то не в чем. Да и нет того, кому он доверял бы в той полной мере, в какой доверяет своей собаке Дейзи."
     rating: 8.1
@@ -182,7 +182,7 @@ MOVIES:
   -
     id: 21
     name_ukr: "Хороший, плохой, злой"
-    name_eng: "Il buono, il brutto, il cattivo"
+    name_native: "Il buono, il brutto, il cattivo"
     year: 1979
     description: "В разгар гражданской войны таинственный стрелок скитается по просторам Дикого Запада. У него нет ни дома, ни друзей, ни компаньонов, пока он не встречает двоих незнакомцев, таких же безжалостных и циничных. По воле судьбы трое мужчин вынуждены объединить свои усилия в поисках украденного золота. Но совместная работа — не самое подходящее занятие для таких отъявленных бандитов, как они. Компаньоны вскоре понимают, что в их дерзком и опасном путешествии по разоренной войной стране самое важное — никому не доверять и держать пистолет наготове, если хочешь остаться в живых."
     rating: 8.5
@@ -191,7 +191,7 @@ MOVIES:
   -
     id: 22
     name_ukr: "Укрощение строптивого"
-    name_eng: "Il bisbetico domato"
+    name_native: "Il bisbetico domato"
     year: 1980
     description: "Категорически не приемлющий женского общества грубоватый фермер вполне счастлив и доволен своей холостяцкой жизнью. Но неожиданно появившаяся в его жизни героиня пытается изменить его взгляды на жизнь и очаровать его. Что же из этого получится…"
     rating: 7.7
@@ -200,7 +200,7 @@ MOVIES:
   -
     id: 23
     name_ukr: "Блеф"
-    name_eng: "Bluff storia di truffe e di imbroglioni"
+    name_native: "Bluff storia di truffe e di imbroglioni"
     year: 1976
     description: "Белль Дюк имеет старые счеты с Филиппом Бэнгом, который отбывает свой срок за решёткой. Для того чтобы поквитаться с Филиппом, Белль Дюк вступает в сговор с другим аферистом по имени Феликс, чтобы тот организовал побег Филиппа Бенга из тюрьмы. Побег удаётся, но парочка заодно обманывает и Белль Дюк, исчезнув прямо из-под её носа. Выясняется, что и Филипп Бэнг, в свою очередь, не прочь отомстить Белль Дюк. Для этого он задумывает грандиозную мистификацию, сродни покерному блефу…"
     rating: 7.6
@@ -209,7 +209,7 @@ MOVIES:
   -
     id: 24
     name_ukr: "Джанго освобожденный"
-    name_eng: "Django Unchained"
+    name_native: "Django Unchained"
     year: 2012
     description: "Эксцентричный охотник за головами, также известный как «Дантист», промышляет отстрелом самых опасных преступников. Работенка пыльная, и без надежного помощника ему не обойтись. Но как найти такого и желательно не очень дорогого? Беглый раб по имени Джанго — прекрасная кандидатура. Правда, у нового помощника свои мотивы — кое с чем надо разобраться…"
     rating: 8.5
@@ -218,7 +218,7 @@ MOVIES:
   -
     id: 25
     name_ukr: "Танцующий с волками"
-    name_eng: "Dances with Wolves"
+    name_native: "Dances with Wolves"
     year: 1990
     description: "Действие фильма происходит в США во времена Гражданской войны. Лейтенант американской армии Джон Данбар после ранения в бою просит перевести его на новое место службы ближе к западной границе США. Место его службы отдалённый маленький форт. Непосредственный его командир покончил жизнь самоубийством, а попутчик Данбара погиб в стычке с индейцами после того, как довез героя до места назначения. Людей, знающих, что Данбар остался один в форте и должен выжить в условиях суровой природы, и в соседстве с кажущимися негостеприимными коренными обитателями Северной Америки, просто не осталось. Казалось, он покинут всеми. Постепенно лейтенант осваивается, он ведет записи в дневнике…"
     rating: 8
