1. Add dependencies for Open Feign and Spring Retry 2. Cached movies implemented 3. Retry logic added 4. Feign client added 5. Tests added

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,4 @@ movie:
     value: 3
 
 service:
-  pathToCurrenciesRatesInJson: "https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json"
+  pathToCurrenciesRatesInJson: https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json
