Itr_2_v_8: 1. Implementation of the enrichment services were done 2. DefaultMovieService: getById was rewrite with enrichment 3. Change the logic for querying the movie: select now returns movie without countries and genres 4. Fix tests

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,15 @@
     </properties>
 
     <dependencies>
+
+        <!-- DEVTOOLS -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!-- FEIGN -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
