Fixes after review: 1. Delete @Async annotation (unnecessary, methods already async), delete @EnableAsync 2. Add @Profile instead of @Qualifier 3. Changed ParallelEnrichmentService to work with isItrerrupted() method 4. Use interface types everywhere

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <spring-cloud.version>4.0.0</spring-cloud.version>
 
         <skipIT>true</skipIT>
+        <spring.profiles.active>dev</spring.profiles.active>
     </properties>
 
     <dependencies>
