--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,20 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: none
+  kafka:
+    #    properties:
+    #      security.protocol: SSL
+    #      sasl.mechanism: PLAIN
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      enable-auto-commit: false
+      auto-offset-reset: earliest
+      group-id: group-one
+      properties:
+        max.poll.records: 500
+    listener:
+      ack-mode: manual_immediate
 
 cache:
   evict:
